Vector blur explodes on curves #39585

Closed
opened 2014-04-04 02:58:02 +02:00 by Daniel Salazar · 14 comments
Member

System Information

openSUSE 12.3 64bits
NVIDIA 480GTX SC

Blender Version

Broken: d923720

Short description of error

Vector blur seems to be failing on curves

Exact steps for others to reproduce the error

Open VBlur.blend and press F12
Let the compositor work and see the exploding vblur

**System Information** openSUSE 12.3 64bits NVIDIA 480GTX SC **Blender Version** Broken: d923720 **Short description of error** Vector blur seems to be failing on curves **Exact steps for others to reproduce the error** Open [VBlur.blend](https://archive.blender.org/developer/F83900/VBlur.blend) and press F12 Let the compositor work and see the exploding vblur
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

#39687 was marked as duplicate of this issue

#39687 was marked as duplicate of this issue

Added subscriber: @willi-2

Added subscriber: @willi-2

Confirmed.

2.70 official:
pic2.png

latest build:
pic1.png

Confirmed. 2.70 official: ![pic2.png](https://archive.blender.org/developer/F83901/pic2.png) latest build: ![pic1.png](https://archive.blender.org/developer/F83903/pic1.png)

Added subscriber: @mont29

Added subscriber: @mont29
Sergey Sharybin self-assigned this 2014-04-10 18:36:17 +02:00
Sergey Sharybin removed their assignment 2014-04-11 11:53:52 +02:00
Brecht Van Lommel was assigned by Sergey Sharybin 2014-04-11 11:53:52 +02:00

Added subscribers: @brecht, @Sergey

Added subscribers: @brecht, @Sergey

The issue is caused by 99f5993088.

@brecht, assigning to you.

The issue is caused by 99f5993088. @brecht, assigning to you.

Added subscribers: @RolfJawarsch, @MartijnBerger

Added subscribers: @RolfJawarsch, @MartijnBerger

◀ Merged tasks: #39687.

◀ Merged tasks: #39687.

This issue was referenced by blender/blender-addons-contrib@5f01b3d96e

This issue was referenced by blender/blender-addons-contrib@5f01b3d96ed116d1c0416d5393911211d409a4ae

This issue was referenced by 5f01b3d96e

This issue was referenced by 5f01b3d96ed116d1c0416d5393911211d409a4ae

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5f01b3d96e.

Closed by commit 5f01b3d96e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39585
No description provided.