Fix T39585: cycles motion vector pass problem with curves.